# love

./: readme.md
love/: README.md  build.cmd  pubspec.yaml
love/android/app/: build.gradle
love/android/app/src/main/: AndroidManifest.xml
love/android/app/src/profile/: AndroidManifest.xml
love/android/gradle/wrapper/: gradle-wrapper.properties
love/ios/: Podfile
love/ios/Runner/: Info.plist
love/ios/Runner.xcodeproj/: project.pbxproj
love/ios/Runner/Base.lproj/: LaunchScreen.storyboard
love/lib/: main.dart
love/lib/component/: component_avatar.dart  component_cache_img.dart  item_album.dart  item_calendar.dart  item_countdown.dart  item_dynamic.dart  item_notebook.dart  item_task.dart
love/lib/pages/: fragment.dart  fragment_album.dart  fragment_calendar.dart  fragment_dynamic.dart  fragment_home.dart  fragment_me.dart  fragment_more.dart  fragment_notebook.dart  fragment_task.dart  page_album_detail.dart  page_edit.dart  page_photo_view.dart
love/lib/utils/: api.dart  const.dart  http.dart  model.dart  storage.dart  utils.dart
love/linux/: CMakeLists.txt  my_application.cc
love/macos/Runner.xcodeproj/: project.pbxproj
love/macos/Runner/Configs/: AppInfo.xcconfig
love/test/: widget_test.dart
love/web/: index.html  manifest.json
love/windows/: CMakeLists.txt
love/windows/runner/: Runner.rc  main.cpp
love_back/: .gitignore  Cargo.toml  app.yaml
love_back/src/: main.rs
love_back/src/lib/: config.rs  db.rs  mod.rs  utils.rs
love_back/src/web/: handle.rs  middleware.rs  mod.rs  model.rs  router.rs
(+3 files in other folders)
